--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 
 <body>
     <header>
+        <div class="abertura">
+            <div id="intro-1">
+                <div class="restaurante">
+                    <span>成</span>
+                    <h1>DARUMA</h1>
+                    <h2>RESTAURANTE <span id="trocaPalavra">JAPONÊS</span></h2>
+                </div>
+            </div>
+        </div>
         <div class="restaurante">
             <span>成</span>
             <h1>DARUMA</h1>
@@ -40,7 +49,7 @@
         <section id="intro">
             <p>Seja bem-vindo! Esse é o nosso cardapio à la carte, acesse pressionando a categoria de prato que deseja
                 acima.</p>
-                <h3>PROMOÇÕES:</h3>
+            <h3>PROMOÇÕES:</h3>
             <figure class="promo">
                 <figcaption>PROMOÇÃO 12 PEÇAS POR R$49,90</figcaption>
             </figure>
@@ -1081,21 +1090,30 @@
         <section class="container-redes">
             <div class="restaurante">
                 <span>成</span>
-                <h1>DARUMA</h1>
-                <h2>RESTAURANTE JAPONÊS</h2>
+                <h3>DARUMA</h3>
+                <h4>RESTAURANTE JAPONÊS</h4>
             </div>
             <div class="rede-sociais">
-                <a href="#"><img class="rede-sociais-img" src="assets/imgs/whatsapp.png" alt="whatsapp"></a>
-                <a href="#"><img class="rede-sociais-img" src="assets/imgs/instagram.png" alt="instagram"></a>
-                <a href="#"><img class="rede-sociais-img-ifood" src="assets/imgs/ifood.png" alt="ifood"></a>
+                <a href="https://wa.me/558296490966"><img class="rede-sociais-img" src="assets/imgs/whatsapp.png"
+                        alt="whatsapp"></a>
+                <a href="https://www.instagram.com/daruma.penedo/profilecard/?igsh=MW90NTJramY5NmxwNg=="><img
+                        class="rede-sociais-img" src="assets/imgs/instagram.png" alt="instagram"></a>
+                <a href="https://pedeaqui.me/daruma"><img class="rede-sociais-img" src="assets/imgs/pedeaqui.png"
+                        alt="pedeaqui"></a>
             </div>
         </section>
         <section class="container-redes">
-            <h3>CRIADOR:</h3>
+            <figure class="criador">
+                <img src="assets/imgs/perfil.jfif" alt="perfil">
+                <figcaption>PEDRO NASCIMENTO</figcaption>
+            </figure>
             <div class="rede-sociais">
-                <a href="#"><img class="rede-sociais-img" src="assets/imgs/whatsapp.png" alt="whatsapp"></a>
-                <a href="#"><img class="rede-sociais-img" src="assets/imgs/instagram.png" alt="instagram"></a>
-                <a href="#"><img class="rede-sociais-img" src="assets/imgs/github.png" alt="github"></a>
+                <a href="https://wa.me/5582996430080"><img class="rede-sociais-img" src="assets/imgs/whatsapp.png"
+                        alt="whatsapp"></a>
+                <a href="https://www.instagram.com/pedro__nascimentoo/profilecard/?igsh=MWZyOXdpNDRlOGhr"><img
+                        class="rede-sociais-img" src="assets/imgs/instagram.png" alt="instagram"></a>
+                <a href="https://github.com/PedroNascimento009"><img class="rede-sociais-img"
+                        src="assets/imgs/github.png" alt="github"></a>
             </div>
         </section>
     </footer>
