--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
                         alt="whatsapp"></a>
                 <a href="https://www.instagram.com/daruma.penedo/profilecard/?igsh=MW90NTJramY5NmxwNg=="><img
                         class="rede-sociais-img" src="assets/imgs/instagram.png" alt="instagram"></a>
-                <a href="https://pedeaqui.me/daruma"><img class="rede-sociais-img" src="assets/imgs/pedeaqui.png"
+                <a href="https://pedeaqui.me/daruma"><img class="rede-sociais-img-pedeaqui" src="assets/imgs/pedeaqui.png"
                         alt="pedeaqui"></a>
             </div>
         </section>
