--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles/base.css">
+    <link rel="stylesheet" href="assets/styles/header.css">
+    <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="assets/styles/footer.css">
     <link rel="stylesheet" href="assets/styles/font-colors.css">
     <link rel="stylesheet" href="assets/styles/imgs.css">
     <link rel="stylesheet" href="assets/styles/media.css">
@@ -13,15 +15,13 @@
 
 <body>
     <header>
-        <div class="abertura">
-            <div id="intro-1">
-                <div class="restaurante">
-                    <span>成</span>
-                    <h1>DARUMA</h1>
-                    <h2>RESTAURANTE <span id="trocaPalavra">JAPONÊS</span></h2>
-                </div>
+        <section id="intro-1">
+            <div class="restaurante">
+                <span>成</span>
+                <h1>DARUMA</h1>
+                <h2>RESTAURANTE <span id="trocaPalavra">JAPONÊS</span></h2>
             </div>
-        </div>
+        </section>
         <div class="restaurante">
             <span>成</span>
             <h1>DARUMA</h1>
@@ -1098,8 +1098,8 @@
                         alt="whatsapp"></a>
                 <a href="https://www.instagram.com/daruma.penedo/profilecard/?igsh=MW90NTJramY5NmxwNg=="><img
                         class="rede-sociais-img" src="assets/imgs/instagram.png" alt="instagram"></a>
-                <a href="https://pedeaqui.me/daruma"><img class="rede-sociais-img-pedeaqui" src="assets/imgs/pedeaqui.png"
-                        alt="pedeaqui"></a>
+                <a href="https://pedeaqui.me/daruma"><img class="rede-sociais-img-pedeaqui"
+                        src="assets/imgs/pedeaqui.png" alt="pedeaqui"></a>
             </div>
         </section>
         <section class="container-redes">
